--- a/app/components/Board/Column.module.css
+++ b/app/components/Board/Column.module.css
@@ -58,7 +58,9 @@
 
 @media (max-width: 640px) {
     .column {
-        min-width: 85vw;
-        max-width: 85vw;
+        min-width: 80vw;
+        max-width: 80vw;
+        scroll-snap-align: center;
+        /* Better than start on mobile */
     }
 }
